# dispute_resolution_payment_gateway

./: Architecture.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/: graph.py  llm.py  models.py  qdrant.py  synthetic.py
data_generation/: data_generator.py
static/: index.html  script.js  style.css
