[project]
name = "worldpay-disputeresolution-newpoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.15.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langgraph>=1.1.10",
    "loguru>=0.7.3",
    "numpy>=2.4.4",
    "openai>=2.35.1",
    "pandas>=3.0.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.27",
    "qdrant-client>=1.17.1",
    "requests>=2.33.1",
    "uvicorn[standard]>=0.46.0",
]
